[package]
name = "oxc_estree"
version = "0.48.2"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true, features = ["serialize"], optional = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
serialize = ["dep:oxc_allocator", "dep:serde", "dep:serde_json"]
